k8s/apps/dummy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy
  labels:
    app: dummy
spec:
  selector:
    app: dummy
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
