k8s/apps/dummy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy
spec:
  ingressClassName: tailscale
  rules:
    - host: dummy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy
                port:
                  number: 80
  tls:
    - hosts:
        - dummy
